...
  >
    <Tab.Screen name="Home" component={HomeScreen} options={{ tabBarButtonTestID: "tab-home" }} />
    <Tab.Screen
      name="Products"
      component={ProductStack}
      listeners={productsTabListener}
      options={{ tabBarButtonTestID: "tab-products" }}
    />
    <Tab.Screen name="Cart" component={CartScreen} options={{ tabBarButtonTestID: "tab-cart" }} />
    <Tab.Screen name="Orders" component={OrdersStackScreen} options={{ tabBarButtonTestID: "tab-orders" }} />
    <Tab.Screen name="Profile" component={ProfileStackScreen} options={{ tabBarButtonTestID: "tab-profile" }} />
  </Tab.Navigator>
);
...
